// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withModuleFederation should collect dependencies correctly 1`] = `
Array [
  ModuleFederationPlugin {
    "_options": Object {
      "exposes": Object {
        "./Module": "apps/remote1/src/module.ts",
      },
      "filename": "remoteEntry.mjs",
      "library": Object {
        "type": "module",
      },
      "name": "remote1",
      "remotes": Object {},
      "shared": Object {
        "@angular/core": Object {
          "requiredVersion": "~13.2.0",
          "singleton": true,
          "strictVersion": true,
        },
        "core": Object {
          "eager": undefined,
          "requiredVersion": false,
        },
        "lodash": Object {
          "requiredVersion": undefined,
          "singleton": true,
          "strictVersion": true,
        },
        "shared": Object {
          "eager": undefined,
          "requiredVersion": false,
        },
      },
    },
  },
  NormalModuleReplacementPlugin {
    "newResource": [Function],
    "resourceRegExp": /\\./,
  },
]
`;

exports[`withModuleFederation should create a host config correctly 1`] = `
Array [
  ModuleFederationPlugin {
    "_options": Object {
      "exposes": undefined,
      "filename": "remoteEntry.mjs",
      "library": Object {
        "type": "module",
      },
      "name": "host",
      "remotes": Object {
        "remote1": "http://localhost:4201/remoteEntry.mjs",
      },
      "shared": Object {
        "@angular/core": Object {
          "requiredVersion": "~13.2.0",
          "singleton": true,
          "strictVersion": true,
        },
        "shared": Object {
          "eager": undefined,
          "requiredVersion": false,
        },
      },
    },
  },
  NormalModuleReplacementPlugin {
    "newResource": [Function],
    "resourceRegExp": /\\./,
  },
]
`;

exports[`withModuleFederation should create a remote config correctly 1`] = `
Array [
  ModuleFederationPlugin {
    "_options": Object {
      "exposes": Object {
        "./Module": "apps/remote1/src/module.ts",
      },
      "filename": "remoteEntry.mjs",
      "library": Object {
        "type": "module",
      },
      "name": "remote1",
      "remotes": Object {},
      "shared": Object {
        "@angular/core": Object {
          "requiredVersion": "~13.2.0",
          "singleton": true,
          "strictVersion": true,
        },
        "shared": Object {
          "eager": undefined,
          "requiredVersion": false,
        },
      },
    },
  },
  NormalModuleReplacementPlugin {
    "newResource": [Function],
    "resourceRegExp": /\\./,
  },
]
`;

exports[`withModuleFederation should map dependencies from project name to import name 1`] = `
Array [
  ModuleFederationPlugin {
    "_options": Object {
      "exposes": Object {
        "./Module": "apps/remote1/src/module.ts",
      },
      "filename": "remoteEntry.mjs",
      "library": Object {
        "type": "module",
      },
      "name": "remote1",
      "remotes": Object {},
      "shared": Object {
        "@angular/core": Object {
          "requiredVersion": "~13.2.0",
          "singleton": true,
          "strictVersion": true,
        },
        "@myorg/core": Object {
          "eager": undefined,
          "requiredVersion": false,
        },
        "shared": Object {
          "eager": undefined,
          "requiredVersion": false,
        },
      },
    },
  },
  NormalModuleReplacementPlugin {
    "newResource": [Function],
    "resourceRegExp": /\\./,
  },
]
`;
